--- a/app/templates/app/post_list.html
+++ b/app/templates/app/post_list.html
@@ -3,7 +3,7 @@
 <h2>英文一覧</h2>
 <ol>
     {% for post in object_list %}
-    <li><a href="#">{{ post.title }}</a></li>
+    <li><a href="{% url 'detail' post.id %}">{{ post.title }}</a></li>
     {% endfor %}
 </ol>
 {% endblock %}
