--- a/app/templates/app/post_detail.html
+++ b/app/templates/app/post_detail.html
@@ -7,4 +7,5 @@
     {{ object.body }}
 </div>
 <p><a href="{% url 'update' object.pk %}">編集</a></p>
+<p><a href="{% url 'delete' object.pk %}">削除</a></p>
 {% endblock %}
